fixed css flex on wraper1

--- a/css/mainstyle.css
+++ b/css/mainstyle.css
@@ -80,7 +80,7 @@ html {
 }
 .sample1{
     border: 10px solid lightgray;
-    width: 40%;
+    width: 75%;
 }
 /* .overlay{
     opacity:1;
